# easy-ddns

./: Cargo.toml
src/: main.rs
